[package]
name = "test-nutype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
nutype = { version = "*", features = ["serde1"] }
anyhow = "*"
schemars = "*"
